Added sitemap and static map pages

--- a/public/maps/index.html
+++ b/public/maps/index.html
@@ -74,41 +74,46 @@
 
         <h2>Confirmed Maps in ARC Raiders</h2>
 
-        <h3>Dam Battlegrounds</h3>
+        <h3><a href="/maps/dam-battlegrounds/" style="color: #3a7bc8; text-decoration: none;">Dam Battlegrounds</a></h3>
         <ul>
             <li><strong>Availability:</strong> Always Available</li>
             <li><strong>Risk Level:</strong> Medium</li>
             <li><strong>Description:</strong> The foundational map, offering diverse terrain from open areas to vertical zones and close-quarters sections. Ideal for newcomers to learn game mechanics and for consistent farming runs.</li>
             <li><strong>Key Features:</strong> Consistent spawns, balanced PvE and PvP encounters, multiple extraction points.</li>
         </ul>
+        <p><a href="/maps/dam-battlegrounds/" style="color: #3a7bc8; text-decoration: none; font-weight: 600;">→ View Full Dam Battlegrounds Guide</a></p>
 
-        <h3>Spaceport</h3>
+        <h3><a href="/maps/spaceport/" style="color: #3a7bc8; text-decoration: none;">Spaceport</a></h3>
         <ul>
             <li><strong>Availability:</strong> Limited Time</li>
             <li><strong>Risk Level:</strong> High</li>
             <li><strong>Description:</strong> A high-tech facility brimming with advanced loot but fraught with increased danger. This high-risk, high-reward environment is recommended for experienced Raiders with optimized gear.</li>
             <li><strong>Key Features:</strong> High-value loot, intense PvP zones, advanced enemy types.</li>
         </ul>
+        <p><a href="/maps/spaceport/" style="color: #3a7bc8; text-decoration: none; font-weight: 600;">→ View Full Spaceport Guide</a></p>
 
-        <h3>Buried City</h3>
+        <h3><a href="/maps/buried-city/" style="color: #3a7bc8; text-decoration: none;">Buried City</a></h3>
         <ul>
             <li><strong>Availability:</strong> Limited Time</li>
             <li><strong>Risk Level:</strong> High</li>
             <li><strong>Description:</strong> Delve into underground ruins featuring unique environmental hazards and specialized loot. This map demands careful navigation and environmental awareness, favoring stealthier approaches.</li>
             <li><strong>Key Features:</strong> Environmental hazards, unique loot, predominantly close-quarters combat.</li>
         </ul>
+        <p><a href="/maps/buried-city/" style="color: #3a7bc8; text-decoration: none; font-weight: 600;">→ View Full Buried City Guide</a></p>
 
-        <h3>Stella Montis</h3>
+        <h3><a href="/maps/stella-montis/" style="color: #3a7bc8; text-decoration: none;">Stella Montis</a></h3>
         <ul>
             <li><strong>Availability:</strong> Upcoming</li>
             <li><strong>Description:</strong> A newly confirmed map, promising fresh environments and strategic challenges.</li>
         </ul>
+        <p><a href="/maps/stella-montis/" style="color: #3a7bc8; text-decoration: none; font-weight: 600;">→ View Stella Montis Details</a></p>
 
-        <h3>Blue Gate</h3>
+        <h3><a href="/maps/blue-gate/" style="color: #3a7bc8; text-decoration: none;">Blue Gate</a></h3>
         <ul>
             <li><strong>Availability:</strong> Upcoming</li>
             <li><strong>Description:</strong> Another confirmed map set to expand the diverse battlegrounds of ARC Raiders.</li>
         </ul>
+        <p><a href="/maps/blue-gate/" style="color: #3a7bc8; text-decoration: none; font-weight: 600;">→ View Blue Gate Details</a></p>
 
         <h2>Tactical Information for Map Success</h2>
 
