Added blogs and one article

--- a/public/maps/blue-gate/index.html
+++ b/public/maps/blue-gate/index.html
@@ -56,6 +56,7 @@
                     <li><a href="../../skills/index.html">Skills</a></li>
                     <li><a href="../../loadouts/index.html">Loadouts</a></li>
                     <li><a href="../../weapons/index.html">Weapons</a></li>
+                    <li><a href="../../blog/index.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,4 +109,5 @@
     </footer>
 </body>
 </html>
+
 
