--- a/public/loadouts/index.html
+++ b/public/loadouts/index.html
@@ -64,6 +64,7 @@
                     <li><a href="../skills/index.html">Skills</a></li>
                     <li><a href="index.html" class="active">Loadouts</a></li>
                     <li><a href="../weapons/index.html">Weapons</a></li>
+                    <li><a href="../blog/index.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
