--- a/public/weapons/index.html
+++ b/public/weapons/index.html
@@ -94,6 +94,7 @@
                     <li><a href="../skills/index.html">Skills</a></li>
                     <li><a href="../loadouts/index.html">Loadouts</a></li>
                     <li><a href="index.html" class="active">Weapons</a></li>
+                    <li><a href="../blog/index.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
