Added vercel analytics

--- a/public/index.html
+++ b/public/index.html
@@ -144,5 +144,9 @@
         <p>&copy; 2025 Arc Raiders Guide Hub. Fan-made resource for the Arc Raiders community.</p>
         <p style="margin-top: 5px;">All game content © Embark Studios AB. Not affiliated with or endorsed by Embark Studios.</p>
     </footer>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
