--- a/public/loadouts/index.html
+++ b/public/loadouts/index.html
@@ -168,5 +168,9 @@
     <footer>
         <p>All game content © Embark Studios AB. Not affiliated with or endorsed by Embark Studios.</p>
     </footer>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
