Added items page

--- a/public/index.html
+++ b/public/index.html
@@ -188,6 +188,7 @@
                     <li><a href="skills/index.html">Skills</a></li>
                     <li><a href="loadouts/index.html">Loadouts</a></li>
                     <li><a href="weapons/index.html">Weapons</a></li>
+                    <li><a href="items/index.html">Items</a></li>
                     <li><a href="blog/index.html">Blog</a></li>
                 </ul>
             </nav>
@@ -242,6 +243,13 @@
                 <p>Complete arsenal guide featuring all weapon types with detailed stats, effectiveness ratings, and tactical recommendations for every firearm.</p>
                 <a href="weapons/index.html">View Weapons</a>
             </div>
+
+            <div class="card">
+                <div class="card-icon">📦</div>
+                <h2>Items Database</h2>
+                <p>Comprehensive catalog of 250+ in-game items including ammunition, materials, blueprints, keys, and quick-use items with values and rarities.</p>
+                <a href="items/index.html">Browse Items</a>
+            </div>
         </div>
 
         <div class="coming-soon">
@@ -266,6 +274,7 @@
                     <li><a href="skills/index.html">Skills</a></li>
                     <li><a href="loadouts/index.html">Loadouts</a></li>
                     <li><a href="weapons/index.html">Weapons</a></li>
+                    <li><a href="items/index.html">Items</a></li>
                 </ul>
             </div>
             
