--- a/public/maps/blue-gate/index.html
+++ b/public/maps/blue-gate/index.html
@@ -5,17 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Gate Map - Arc Raiders Upcoming Map Guide</title>
     <meta name="description" content="Blue Gate is a confirmed upcoming map in Arc Raiders. Learn about this new battlefield and prepare for unique tactical challenges when it launches.">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/header.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif; line-height: 1.6; background-color: #141414; color: #e0e0e0; }
-        header { background: linear-gradient(135deg, #1a1a1a 0%, #0f0f0f 100%); border-bottom: 1px solid #2a2a2a; position: sticky; top: 0; z-index: 1000; }
-        .header-container { max-width: 1400px; margin: 0 auto; padding: 0 20px; display: flex; align-items: center; justify-content: space-between; height: 80px; }
-        .logo-section { display: flex; align-items: center; gap: 15px; }
-        .logo-img { height: 50px; width: auto; }
-        .site-title { font-size: 1.5em; font-weight: 600; color: #ffffff; }
-        nav ul { display: flex; list-style: none; gap: 30px; }
-        nav a { color: #b0b0b0; text-decoration: none; font-weight: 500; transition: color 0.3s ease; }
-        nav a:hover, nav a.active { color: #3a7bc8; }
         main { max-width: 1200px; margin: 0 auto; padding: 60px 20px; }
         .page-header { text-align: center; margin-bottom: 50px; }
         .page-header h1 { font-size: 3em; margin-bottom: 15px; background: linear-gradient(135deg, #3a7bc8 0%, #5a9ae0 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
@@ -179,25 +173,7 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <div class="logo-section">
-                <img src="../../logo.png" alt="ARC Raiders Logo" class="logo-img">
-                <span class="site-title">Arc Raiders Hub</span>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../../guides/index.html">Guides</a></li>
-                    <li><a href="../index.html" class="active">Maps</a></li>
-                    <li><a href="../../skills/index.html">Skills</a></li>
-                    <li><a href="../../loadouts/index.html">Loadouts</a></li>
-                    <li><a href="../../weapons/index.html">Weapons</a></li>
-                    <li><a href="../../blog/index.html">Blog</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="header-placeholder"></div>
 
     <main>
         <div class="breadcrumb">
@@ -241,39 +217,12 @@
         </ul>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Arc Raiders Hub</h3>
-                <p>Your community-driven resource for Arc Raiders guides, maps, loadouts, and the latest game updates. Built by players, for players.</p>
-                <p style="margin-top: 20px; font-size: 0.85em;">All game content © Embark Studios AB. Not affiliated with or endorsed by Embark Studios.</p>
-            </div>
-            
-            <div class="footer-section">
-                <h3>Resources</h3>
-                <ul class="footer-links">
-                    <li><a href="../../guides/index.html">Guides</a></li>
-                    <li><a href="../index.html">Maps</a></li>
-                    <li><a href="../../skills/index.html">Skills</a></li>
-                    <li><a href="../../loadouts/index.html">Loadouts</a></li>
-                    <li><a href="../../weapons/index.html">Weapons</a></li>
-                </ul>
-            </div>
-            
-            <div class="footer-section">
-                <h3>Community</h3>
-                <ul class="footer-links">
-                    <li><a href="../../blog/index.html">Blog</a></li>
-                    <li><a href="https://github.com/RaidTheory/arcraiders-data" target="_blank" rel="noopener">Game Data</a></li>
-                    <li><a href="https://arcraiders.com" target="_blank" rel="noopener">Official Site</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
     <script>
       window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+    <script src="/js/includes.js"></script>
 </body>
 </html>
 
