--- a/public/guides/arc-raiders-beginners-guide/index.html
+++ b/public/guides/arc-raiders-beginners-guide/index.html
@@ -130,8 +130,8 @@
             max-width: 1100px;
             margin: 0 auto;
             display: grid;
-            grid-template-columns: 2fr 1fr 1fr;
-            gap: 60px;
+            grid-template-columns: 2fr 1.2fr 0.8fr 0.8fr;
+            gap: 40px;
             margin-bottom: 40px;
         }
         
